--- a/config/toshi.yml.example
+++ b/config/toshi.yml.example
@@ -1,17 +1,17 @@
 development: &development
-  database_url: postgres://postgres:postgres@127.0.0.1:21001/toshi_development
+  database_url: <%= ENV['DATABASE_URL'] || 'postgres://postgres:postgres@127.0.0.1:21001/toshi_development' %>
   log_level: <%= ENV['LOG_LEVEL'] || 'debug' %>
   max_peers: 8
   network: <%= ENV['BITCOIN_NETWORK'] || 'testnet3' %>
   peers: []
-  redis_url: redis://127.0.0.1:21002/0
+  redis_url: <%= ENV['REDIS_URL'] || 'redis://127.0.0.1:21002/0' %>
 
 test:
   <<: *development
-  database_url: postgres://postgres:postgres@127.0.0.1:21001/toshi_test
+  database_url: <%= ENV['DATABASE_URL'] || 'postgres://postgres:postgres@127.0.0.1:21001/toshi_test' %>
   log_level: <%= ENV['LOG_LEVEL'] || 'info' %>
   max_peers: 1
-  redis_url: redis://127.0.0.1:21002/1
+  redis_url: <%= ENV['REDIS_URL'] || 'redis://127.0.0.1:21002/1' %>
 
 production:
   database_url: <%= ENV['DATABASE_URL'] %>
